Media/Bazarr/bazarr.deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: media
  labels:
    app.kubernetes.io/name: bazarr
spec:
  replicas: 1
  selector:
    matchLabels:
        app.kubernetes.io/name: bazarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bazarr
    spec:
      containers:
      - name: bazarr
        image: linuxserver/bazarr
        volumeMounts:
        - name: config
          mountPath: /config
        - name: videos
          mountPath: /tv
        - name: videos
          mountPath: /movies
        ports:
        - containerPort: 6767
          name: http
          protocol: TCP
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: bazarr-config
      - name: videos
        persistentVolumeClaim:
          claimName: jellyfin-videos
