Media/Bazarr/bazarr.service.yml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: media
  labels:
    app.kubernetes.io/name: bazarr
  annotations:
spec:
  ports:
    - name: http
      port: 6767
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: bazarr
