Media/Bazarr/bazarr.ingress-traefik.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr-ingress
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`bazarr.local.flyvmed.dk`) && PathPrefix(`/`)
    kind: Rule
    services:
    - kind: Service
      name: bazarr
      namespace: media
      port: 6767
  tls:
    certResolver: letsencrypt
